# AIS

./: .env.dist  .gitignore  LICENSE  README.md  manage.py  openapi_v1.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: django.yml
accounts/: README.md  forms.py  models.py  urls.py  views.py
accounts/fixtures/: sample.json
accounts/fixtures/accounts/: sample.json
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: profile.html
accounts/templates/accounts/registration/: login.html  member_deactivate_confirm.html  member_deactivate_form.html  member_delete_confirm.html  member_delete_form.html  member_edit.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
accounts/tests/: test_accounts_models.py  test_login.py  test_login_view.py  test_logout.py  test_logout_view.py  test_member_deactivate.py  test_member_delete.py  test_member_edit.py  test_member_own_profile_view.py  test_password_chnage.py  test_password_reset.py  test_signup.py  test_signup_view.py  test_title_parser.py
api/: urls.py
api/fixtures/api/: test_fixture.json
api/v1/: serializers.py  urls.py  views.py
api/v1/tests/: test_api_device_data.py  test_api_device_groups.py  test_api_devices.py  test_api_members.py  test_serializers_assert_value.py
api/v2/: serializers.py  views.py
api/v2/tests/: test_api_device_groups.py  test_api_devices.py
api/v3/: serializers.py  urls.py  views.py
api/v3/tests/: test_api_device_groups.py
common/: __init__.py
common/forms/: mixins.py
common/static/base/css/: style.css
common/templates/base/: base_navbar.html  base_page.html  base_pagination.html  base_search_bar.html
common/views/: mixins.py
dashboard/: urls.py  views.py  views.py,cover
dashboard/templates/dashboard/: dashboard.html
devices/: admin.py  forms.py  models.puml  models.py  urls.py  views.py
devices/fixtures/: sample.json
devices/fixtures/devices/: sample.json
devices/migrations/: 0001_initial.py
devices/templates/devices/: device_data.html  device_details.html  search.html
devices/templates/devices/data/: details.html  list.html
devices/templates/devices/device/: create.html  data_history.html  delete.html  details.html  edit.html  list.html
devices/templates/devices/group/: create.html  delete.html  details.html  edit.html  list.html
devices/tests/data/: test_device_data_details.py  test_device_data_in_device_details.py  test_device_data_list.py  test_devie_data_history.py
devices/tests/device/: test_device_create.py  test_device_delete.py  test_device_details.py  test_device_edit.py  test_device_list.py  test_device_search.py  test_device_search_form.py
devices/tests/group/: test_device_group_create.py  test_device_group_delete.py  test_device_group_details.py  test_device_group_edit.py  test_device_group_list.py
docs/openapi/html/: index.html
fixtures/: sample.json
sia/: asgi.py  settings.py  urls.py  wsgi.py
templates/base/: base_navbar.html  base_page.html
test/pages/: common.py
test/utils/: helpers.py  title_parser.py
test/utils/tests/: test_title_parser.py
tests/pages/: common.py
tests/utils/: helpers.py
tests/utils/tests/: test_title_parser.py
