[tool.poetry]
name = "sia"
version = "0.1.0"
description = ""
authors = ["Mohammad Mohsen <kuro.ece@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
django-rest-framework = "^0.1.0"
paho-mqtt = "^1.6.1"
django-tastypie = "^0.14.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.3.2"
pytest-django = "^4.5.2"
pytest-xdist = "^3.3.1"
pytest-cov = "^4.1.0"
jinja2 = "^3.1.2"
selenium = "^4.10.0"
coverage = "^7.2.7"
pip = "^23.1.2"
django-coverage-plugin = "^3.1.0"
django-debug-toolbar = "^4.1.0"
pytest-skip-slow = "^0.0.5"

[tool.pytest.ini_options]
addopts = "-x -n 8 -v --cov --cov-report html --cov-report term-missing --cov-report lcov --cov-report xml --cov-report json"
# addopts = "-n 8 -v"
console_output_style = "count"
required_plugins = "pytest-django pytest-xdist pytest-cov"
DJANGO_SETTINGS_MODULE = "sia.settings"
python_files = [
    "accounts/tests/test_*.py",
    "devices/tests/group/test_*.py",
    "devices/tests/device/test_*.py",
    "dashboard/tests/test_*.py",
    "mqtt/tests/test_*.py",
    "tests/utils/tests/test_*.py",
]

[tool.coverage.run]
# plugins = ["django_coverage_plugin"]

data_file = "coverage/.coverage"

branch = true

source = [
    "accounts",
    "devices",
]

omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/admin.py",
    "*/apps.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "def __str__",
    "def __repr__",
]
show_missing = true
skip_empty = true
fail_under = 98
sort = "Cover"

[tool.coverage.html]
directory = "coverage/html_report"
title = "SIA Coverage Report"

[tool.coverage.xml]
output = "coverage/xml/coverage.xml"

[tool.coverage.json]
output = "coverage/json/coverage.json"
pretty_print = true

[tool.coverage.lcov]
output = "coverage/lcov/coverage.lcov"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
